# cereal

./: CMakeLists.txt
scripts/: appveyor.bat
unittests/: CMakeLists.txt  array.cpp  basic_string.cpp  bitset.cpp  boost_variant.cpp  chrono.cpp  complex.cpp  deque.cpp  forward_list.cpp  list.cpp  load_construct.cpp  map.cpp  memory.cpp  memory_cycles.cpp  multimap.cpp  multiset.cpp  pair.cpp  pod.cpp  polymorphic.cpp  portable_binary_archive.cpp  priority_queue.cpp  queue.cpp  set.cpp  stack.cpp  structs.cpp  structs_minimal.cpp  structs_specialized.cpp  tuple.cpp  unordered_loads.cpp  unordered_map.cpp  unordered_multimap.cpp  unordered_multiset.cpp  unordered_set.cpp  user_data_adapters.cpp  valarray.cpp  vector.cpp  versioning.cpp
